--- a/src/App.css
+++ b/src/App.css
@@ -12,27 +12,27 @@
 }
 
 .board {
-    width: calc(64px * 8);
-    height: calc(64px * 8);
+    width: calc(4rem * 8);
+    height: calc(4rem * 8);
     display: flex;
     flex-wrap: wrap;
     border: 2rem solid #4a4d60;
 }
 
 .cell {
-    width: 64px;
-    height: 64px;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .figure {
-    width: 48px;
-    height: 48px;
+    width: 3.2rem;
+    height: 3.2rem;
     position: relative;
-    -webkit-filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.45));
     filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.45));
+    transition: all 0.2s;
 }
 
 .figure.black {
@@ -43,6 +43,39 @@
 .figure.white {
     color: white;
     background: transparent;
+}
+
+.figure:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.selected .figure {
+    transform: scale(1.3);
+    filter: drop-shadow(0 0 7px rgba(0, 0, 0, 0.55));
+}
+
+.available {
+    position: absolute;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    background: rgba(21, 150, 132);
+    transition: all 0.2s;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+.cell:hover .available {
+    transform: scale(1.1);
+    background: rgb(27, 183, 160);
+}
+
+.cell:has(.available):hover{
+    cursor: pointer;
+}
+
+.attack .figure{
+    filter: drop-shadow(0 0 7px rgba(255, 0, 0, 0.48));
 }
 
 .black {
